@@ -22,7 +22,6 @@ exportMethods(tnsSRE)
 import(ggplot2)
 import(methods)
 importClassesFrom(RTN,TNI)
-importClassesFrom(RTNduals,MBR)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(RTN,tna.gsea2)
 importFrom(RTN,tna.plot.gsea2)
@@ -31,7 +30,6 @@ importFrom(RTN,tni.get)
 importFrom(RTN,tni.gsea2)
 importFrom(RTN,tni2tna.preprocess)
 importFrom(RTN,upgradeTNI)
-importFrom(RTNduals,mbrGet)
 importFrom(RTNduals,mbrPlotInteraction)
 importFrom(data.table,dcast)
 importFrom(data.table,melt)
@@ -71,6 +69,7 @@ importFrom(survival,Surv)
 importFrom(survival,coxph)
 importFrom(survival,survdiff)
 importFrom(survival,survfit)
+importFrom(utils,combn)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,txtProgressBar)
 importFrom(viper,aREA)
